--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,15 @@
 name = "easy"
 version = "0.1.0"
 edition = "2021"
+authors = ["Caleb Schoepp <hey@calebschoepp.com"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "easy"
+path = "src/lib.rs"
+
+[[bin]]
+name = "cli"
+path = "src/main.rs"
 
 [dependencies]
 structopt = "0.3.26"
